src/unit_tests/importer/test_data/iptables_test1.conf
# Generated by iptables-save v1.2.1a on Fri Jun  1 14:04:15 2001
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1531191:180073476]
:user_chain - [0:0]

# this should be recognized as built-in rule
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 

# this should be recognized as built-in rule
-A FORWARD -m state --state INVALID -j drop_invalid 

# this should be recognized as built-in rule
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 

# this is a hard one, we can not add this combination of states to a normal rule
# should mark as error and add --state line to comment
-A OUTPUT -d 21.21.21.21 -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT 

# this should be recognized as built-in rule
-A OUTPUT -m state --state INVALID -j drop_invalid 

# these go into INPUT chain, should end up with firewall object in DST
-A INPUT -i lo -j ACCEPT
-A INPUT -j user_chain
-A INPUT -j scan_checks_chain

# testing action REJECT with option
-A INPUT -p tcp --dport 0:8000 -j REJECT --reject-with tcp-reset
-A INPUT -p udp --dport 0:8000 -j REJECT --reject-with icmp-port-unreachable

# v2.1 does not support passing control to the same branch from
# several rules This rule will have action 'branch' but branch name
# will be 'user_chain1' This rule will have a comment explaining this
# and branch rule set will be emtpy
-A OUTPUT -j user_chain

-A FORWARD -s 192.168.0.0/16 -m state --state NEW -j ACCEPT

# this should end up with action "Continue" and logging on
-A FORWARD -j LOG --log-prefix "FORWARD catch-all"

# should have icmp (-1,-1) in SRV -- should recognize this as icmp
# even though it is uppercased
-A user_chain -s 128.143.0.0/16 -p ICMP -j ACCEPT

# numeric protocol spec
-A user_chain -d 192.168.1.1 -i eth0 -p 47 -j ACCEPT

# target RETURN
-A user_chain -s 1.1.0.0/16 -p ICMP -j RETURN

# this should be recognized as built-in rule even though it is in user-defined chain
-A user_chain -m state --state RELATED,ESTABLISHED -j ACCEPT

-A user_chain -s 192.168.19.0/24  -p tcp -m tcp --dport 5432 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.16.125  -p tcp -m tcp --dport 5432 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport 873 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A user_chain -s 192.0.34.166 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.19.0/24 -p tcp -m tcp --dport 137:139 -m state --state NEW -j ACCEPT

-A user_chain -s 192.168.0.0/16 -p udp --dport 137 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.0.0/16 -p udp --dport 138 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport 139 -m state --state NEW -j ACCEPT
-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport 445 -m state --state NEW -j ACCEPT
-A user_chain -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT

-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT
-A user_chain -s 192.0.34.166 -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT

-A user_chain -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT

-A user_chain -s 127.0.0.1 -p tcp -m tcp --dport 631 -m state --state NEW -j ACCEPT
-A user_chain -s 127.0.0.1 -p tcp -m tcp --dport 515 -m state --state NEW -j ACCEPT

# different combinations of tcp flags in combination with some other
# options. Taken from a real policy.
#
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -m limit --limit 3/min -j LOG --log-prefix "Stealth XMAS scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -m limit --limit 3/min -j LOG --log-prefix "Stealth XMAS-PSH scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -m limit --limit 3/min -j LOG --log-prefix "Stealth XMAS-ALL scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -m limit --limit 3/min -j LOG --log-prefix "Stealth FIN scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -m limit --limit 3/min -j LOG --log-prefix "Stealth SYN/RST scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m limit --limit 3/min -j LOG --log-prefix "Stealth SYN/FIN scan(?): " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m limit --limit 3/min -j LOG --log-prefix "Stealth Null scan: " --log-level 7 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP 
-A scan_checks_chain -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 


# bad port spec
-A user_chain -s 192.168.0.0/16 -p tcp -m tcp --dport foo -m state --state NEW -j ACCEPT

# Log prefix and log limit test
# Also need action Continue (or NOP)
-A user_chain -s ! 128.143.0.0/16 -m limit --limit 25/hour -j LOG --log-prefix user_chain_notlocal:

-A user_chain -s 128.143.0.0/16 -p tcp --dport 427 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p udp --dport 427 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p tcp --dport 548 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p tcp --dport 201 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p tcp --dport 202 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p tcp --dport 204 -j ACCEPT
-A user_chain -s 128.143.0.0/16 -p tcp --dport 206 -j ACCEPT

# --dports does not necessarily follow -m multiport
#
-A user_chain -m multiport -s 128.143.0.0/16 -p tcp --dports 548,201,202,204,206 -j ACCEPT

-A user_chain -j DROP

COMMIT

# mangle table
*mangle
:PREROUTING ACCEPT
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
:POSTROUTING ACCEPT

# mark in FORWARD
-A FORWARD -i eth1 -p tcp --dport smtp -j MARK --set-mark 16

# mark in FORWARD, argument is hex
-A FORWARD -i eth1 -p tcp --dport smtp -j MARK --set-mark 0xa
-A FORWARD -i eth1 -p tcp --dport smtp -j MARK --set-mark 0xB

# mark in PREROUTING (check option "ipt_mark_prerouting")
-A PREROUTING -i eth1 -p tcp --dport smtp -j MARK --set-mark 16

# option "ipt_mark_connections"
-A PREROUTING -j CONNMARK --restore-mark

# packets from me going out
-A POSTROUTING -o eth1 -p tcp --sport smtp -j MARK --set-mark 16
-A POSTROUTING -j CONNMARK --save-mark

# test ROUTE target
-A POSTROUTING -m mark --mark 1  -j ROUTE  --oif eth0 --continue
-A POSTROUTING -m mark --mark 2  -j ROUTE  --oif eth2 --continue

# test TOS target with parameters (unsupported, but parser
# should not crash on it)
-A POSTROUTING -d 192.168.1.1 -j TOS --set-tos Minimize-Delay
-A POSTROUTING -d 192.168.1.1 -j TOS --set-tos 0x10

COMMIT

*nat
:PREROUTING ACCEPT [1502:275921]
:POSTROUTING ACCEPT [406:45653]
:OUTPUT ACCEPT [406:45653]

-A POSTROUTING -o eth1  -s 192.168.1.0/24 -j SNAT --to-source 222.222.222.222 
-A POSTROUTING -o eth0  -s 192.168.1.0/24 -j SNAT --to-source 192.168.1.1 
-A POSTROUTING -o eth+  -s 192.168.1.32/27 -j SNAT --to-source 222.222.222.10-222.222.222.100 
-A POSTROUTING -o eth+ -p tcp -m tcp  -s 192.168.1.0/24  -d 192.168.1.20 --dport 80 -j SNAT --to-source 192.168.1.1 
-A POSTROUTING -o eth+ -p tcp -m tcp  -s 192.168.1.0/24  -d 192.168.1.20 --dport 80 -j SNAT --to-source 192.168.1.1-192.168.1.10
-A POSTROUTING -o eth1 -p tcp -m tcp  -s 192.168.1.10 --sport 1000:1010  -j SNAT --to-source 222.222.222.222:1000-1010 

-A POSTROUTING -o eth2  -s 192.168.1.0/24 -j MASQUERADE  

-A POSTROUTING   -s 192.168.1.0/24 -j NETMAP --to 222.222.222.0/24 

-A PREROUTING  -p tcp -m tcp   -d 222.222.222.222 --dport 25 -j DNAT --to-destination 192.168.1.10:25 
-A PREROUTING  -p tcp -m tcp   -d 222.222.222.222 --dport 25 -j DNAT --to-destination 192.168.1.10:25-50
-A PREROUTING  -p icmp -m icmp   -d 222.222.222.222 --icmp-type 8/0  -j DNAT --to-destination 192.168.1.10 
-A PREROUTING  -p tcp -m tcp  --sport 1000:1010  -d 222.222.222.222 -j DNAT --to-destination 192.168.1.10 
-A PREROUTING  -p tcp -m tcp   -d 222.222.222.222 --dport 4000:4010 -j DNAT --to-destination 192.168.1.10:4000-4010 
-A PREROUTING  -p tcp -m tcp -m multiport   -d 222.222.222.222 --dports 6667,3128,113,53,21,80,119,25,22,23,540,70,13,2105,443 -j DNAT --to-destination 192.168.1.10 

# numeric protocol spec
-A PREROUTING -d 192.168.3.145 -i eth0 -p 47 -j DNAT --to-destination 1.1.1.1

# a "no nat" rule
-A POSTROUTING   -s 192.168.1.0/24 -d 192.168.2.0/24 -j ACCEPT  

# redirect rule
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128 

# a couple of nat rules in chain OUTPUT
-A OUTPUT  -p tcp -m tcp   -d 192.168.1.22 --dport 80 -j DNAT --to-destination 192.168.2.10:80 
-A OUTPUT  -p icmp -m icmp   -d 22.22.22.23 --icmp-type 11/0  -j DNAT --to-destination 192.168.1.10 

COMMIT
